# agent-sites

./: .dockerignore  .env.example  .gitignore  ARCH.md  CLAUDE.md  Cargo.toml  Dockerfile  PRODUCT.md  README.md  agm.json  agm.lock.json  deno.json  docker-compose.yml  lefthook.yml
.claude/skills/agent-sites-deploy/: SKILL.md  custom-app-mode.md
.github/workflows/: release.yml
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
demo/guestbook/: index.html
docs/: architecture.md
docs/issues/: 2026-06-18-e2e-remaining-issues.md
docs/superpowers/: agent-pov-review-2026-06-19-r2.md  agent-pov-review-2026-06-19-r3.md  agent-pov-review-2026-06-19.md
docs/superpowers/plans/: 2026-06-13-libsql-self-hosted.md  2026-06-13-logging-enhancement.md  2026-06-13-phase-3-4-polish.md  2026-06-13-phase-3-4.md  2026-06-13-phase1-core-platform.md  2026-06-13-phase2-deno-process-management.md  2026-06-19-control-panel-demo.md  2026-06-19-pb-auto-restart.md  2026-06-19-pb-superuser-init.md  2026-06-19-pocketbase-mvp.md  2026-06-19-subpath-fetch-shim.md  2026-06-19-token-only-access.md  2026-06-30-custom-app-deploy.md  2026-07-02-panel-pb-browser.md
docs/superpowers/specs/: 2026-06-13-libsql-self-hosted-design.md  2026-06-13-phase-3-4-design.md  2026-06-13-phase2-deno-process-management-design.md  2026-06-13-platform-architecture-design.md  2026-06-19-control-panel-demo-design.md  2026-06-19-pb-auto-restart-design.md  2026-06-19-pb-superuser-init-design.md  2026-06-19-subpath-fetch-shim-design.md  (+2 more)
public/_panel/: index.html
scripts/: docker-entrypoint.sh  fetch-pocketbase.sh  install-demo.sh
src/: error.ts  lib.ts  lib_master_key_test.ts  lib_proxy_auth_test.ts  lib_test.ts  logging.ts  main.ts  state.ts  state_test.ts
src/api/: apps.ts  apps_test.ts  deploy.ts  deploy_test.ts  files.ts  files_bundle.ts  files_bundle_test.ts  files_test.ts  tokens.ts  tokens_test.ts
src/app/: custom_pm.ts  custom_pm_test.ts  model.ts  model_test.ts  store.ts  store_test.ts
src/auth/: master_key.ts  master_key_test.ts  pb_token_cache.ts  pb_token_cache_test.ts  token_id.ts  token_store.ts  token_store_test.ts
src/integration/: custom_deploy_test.ts
src/process/: mod.ts  mod_test.ts  pocketbase.ts  pocketbase_test.ts  port_allocator.ts  port_allocator_test.ts  spawn_env_test.ts
src/proxy/: mod.ts  mod_test.ts
src/static_files/: mod.ts  mod_test.ts
(+8 files in other folders)
