[package]
name = "agent-sites"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-sites"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
